@@ -17,24 +17,22 @@ public class SceneFloorTracker extends AbstractScene {
         background(0);
 
         ArrayList<TuioCursor> tuioCursorList = client.getTuioCursorList();
-        for (int i=0;i<tuioCursorList.size();i++) {
-            TuioCursor tcur = tuioCursorList.get(i);
+        for (TuioCursor tcur : tuioCursorList) {
             ArrayList<TuioPoint> pointList = tcur.getPath();
 
             if (!pointList.isEmpty()) {
-                stroke(color(0,0,255));
-                TuioPoint startPoint = pointList.get(0);
-                for (int j=0;j<pointList.size();j++) {
-                    TuioPoint end_point = pointList.get(j);
+                stroke(color(0, 0, 255));
+                TuioPoint startPoint = pointList.getFirst();
+                for (TuioPoint end_point : pointList) {
                     line(startPoint.getScreenX(this.width()), startPoint.getScreenY(this.height()), end_point.getScreenX(this.width()), end_point.getScreenY(this.height()));
                     startPoint = end_point;
                 }
 
-                stroke(192,192,192);
-                fill(192,192,192);
-                ellipse( tcur.getScreenX(this.width()), tcur.getScreenY(this.height()), 10, 10);
+                stroke(192, 192, 192);
+                fill(192, 192, 192);
+                ellipse(tcur.getScreenX(this.width()), tcur.getScreenY(this.height()), 10, 10);
                 fill(0);
-                text(""+ tcur.getCursorID(),  tcur.getScreenX(this.width())-5,  tcur.getScreenY(this.height())+5);
+                text("" + tcur.getCursorID(), tcur.getScreenX(this.width()) - 5, tcur.getScreenY(this.height()) + 5);
             }
         }
     }
